# codebase-archaeologist

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/codebase_archaeologist/: __init__.py  cli.py  mcp_server.py  models.py  orchestrator.py
src/codebase_archaeologist/analyzers/: __init__.py  base.py  code_structure.py  dependency_analyzer.py  git_history.py  pattern_detector.py
src/codebase_archaeologist/generators/: __init__.py  architecture_generator.py  base.py  claude_md_generator.py  onboarding_generator.py
tests/: conftest.py  test_cli.py  test_mcp_server.py  test_models.py  test_orchestrator.py
tests/analyzers/: test_code_structure.py  test_dependency_analyzer.py  test_git_history.py  test_pattern_detector.py
tests/generators/: test_architecture_generator.py  test_claude_md_generator.py  test_onboarding_generator.py
tests/integration/: test_dogfood.py
